# xltemplate

./: .gitignore  mkdocs.yml  pyproject.toml  requirements.in  requirements.txt
.github/workflows/: docs.yml  publish.yml
docs/: index.md
docs/reference/: api.md
docs/tutorials/: 01_getting_started.md  02_summarize_dataframes.md  03_schema_extraction.md  index.md
site/: 404.html  index.html  objects.inv  sitemap.xml
site/reference/api/: index.html
site/search/: search_index.json
site/tutorials/: index.html
site/tutorials/01_getting_started/: index.html
site/tutorials/02_summarize_dataframes/: index.html
xltemplate/: __init__.py  schema.py  sheet.py
