[project]
name = "xltemplate"
version = "0.1.0"
description = "A clean OOP interface for populating Excel templates with DataFrames"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "G. Lance Couzens"}
]
keywords = ["excel", "xlsx", "template", "pandas", "polars", "dataframe"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Office Suites",
]

dependencies = [
    "openpyxl>=3.1.0",
]

[project.optional-dependencies]
pandas = ["pandas>=2.0.0"]
polars = ["polars>=0.20.0"]
all = ["pandas>=2.0.0", "polars>=0.20.0"]
dev = ["pytest>=7.0.0", "pandas>=2.0.0", "polars>=0.20.0"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["xltemplate*"]
